# deskroom

./: README.md
.github/workflows/: extension-pre-merge.yml  extension-prod-deploy.yml  extension-stg-deploy.yml  server-deploy.yml  server-pre-merge.yml
client/apps/chrome-extension/: .env.example  package.json  playwright.config.ts  tailwind.config.ts
client/apps/chrome-extension/public/: index.html
client/apps/chrome-extension/src/: newtab.tsx  options.tsx  popup.tsx  style.css
client/apps/chrome-extension/src/api/: categories.ts  cookie.ts  organization.ts
client/apps/chrome-extension/src/background/: index.ts
client/apps/chrome-extension/src/components/: CategorySelect.tsx  CollapsibleCard.tsx  NewKnowledgeBaseForm.tsx  OrgSelect.tsx  ResizeWrapper.tsx  Sidebar.tsx  SidebarContent.tsx  Tooltip.tsx
client/apps/chrome-extension/src/contents/: page.tsx
client/apps/chrome-extension/src/contexts/: DeskroomUserContext.tsx
client/apps/chrome-extension/src/core/: supabase.ts
client/apps/chrome-extension/tests/: drag.spec.ts  fixtures.ts
client/apps/web/: .env.example  middleware.ts  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts
client/apps/web/src/: middleware.ts
scripts/azure/: create-service-principal.sh
scripts/mixpanel/: create-pipeline-abs.sh  delete-pipeline.sh  retrieve-pipelines.sh
server/: .env.example  .env.local  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  newrelic.ini  pyproject.toml  run_worker.py
server/deskroom/: api.py  app.py  config.py  constants.py  logging.py  middlewares.py  mixpanel.py  tasks.py  worker.py
server/deskroom/common/: azure.py  openai.py  schema.py  supabase.py
server/deskroom/images/: endpoints.py  schema.py
server/deskroom/knowledge_base/: endpoints.py  schema.py  service.py  tasks.py  utils.py
server/deskroom/retrieve/: endpoints.py  schema.py  service.py  utils.py
server/deskroom/sources/: dependencies.py  endpoints.py  schema.py
server/tests/: test_app.py  test_openai.py
(+81 files in other folders)
